Circumvent form submit in passphrase modal to avoid password managers

--- a/app/views/modal/passphrase.html
+++ b/app/views/modal/passphrase.html
@@ -3,8 +3,15 @@
           ng-click="$dismiss()">&times;</button>
   <h4 class="modal-title">Please enter your passphrase</h4>
 </div>
+
+<!-- Be careful with editing the structure here, as the scope
+hierarchy is being referenced from
+controllers/device/device.js#promptPassphrase() in a very fragile
+way. -->
+
 <div class="modal-body">
-  <form ng-submit="$close(passphrase)">
+  <form id="passphrase-form"
+        ng-init="installHandler()">
     <div class="form-group">
       <input type="text" class="form-control input-lg" size="12"
              autofocus autocomplete="off"
@@ -33,15 +40,26 @@
     </div>
     <div class="form-group">
       <p class="text-danger"
-         ng-show="check && passphrase && passphraseCheck && passphrase !== passphraseCheck">
+         ng-show="
+         check &&
+         passphrase &&
+         passphraseCheck &&
+         passphrase !== passphraseCheck">
         Passphrases do not match!
       </p>
       <p class="text-danger"
-         ng-show="passphrase.length > 50 || passphraseCheck.length > 50">
+         ng-show="
+         passphrase.length > 50 ||
+         passphraseCheck.length > 50">
         Passphrase is too long!
       </p>
-      <button type="submit" class="btn btn-block btn-primary btn-lg"
-              ng-disabled="check && passphrase !== passphraseCheck || passphrase.length > 50">Enter</button>
+      <button type="button"
+              class="btn btn-block btn-primary btn-lg"
+              id="passphrase-submit"
+              ng-disabled="
+              check &&
+              passphrase !== passphraseCheck ||
+              passphrase.length > 50">Enter</button>
     </div>
   </form>
 </div>
