Firmware check is part of firmware modal now

--- a/app/views/modal/firmware.html
+++ b/app/views/modal/firmware.html
@@ -111,6 +111,25 @@
     </div>
   </div>
 
+  <div ng-switch-when="update-check">
+    <div class="modal-body">
+      <div class="alert alert-info text-center">
+        <h4>Please confirm the firmware fingerprint.</h4>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <samp class="samp-screen"
+                  ng-if="firmware && firmware.fingerprint">
+              {{firmware.fingerprint.substr(0, 16)}}<br>
+              {{firmware.fingerprint.substr(16, 16)}}<br>
+              {{firmware.fingerprint.substr(32, 16)}}<br>
+              {{firmware.fingerprint.substr(48, 16)}}
+            </samp>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div ng-switch-when="update-success">
     <div class="modal-body">
       <div class="alert alert-success text-center">
