--- a/app/views/modal/firmware.html
+++ b/app/views/modal/firmware.html
@@ -115,6 +115,7 @@
     <div class="modal-body">
       <div class="alert alert-info text-center">
         <h4>Please confirm the firmware fingerprint.</h4>
+        <p>Make sure the same text is displayed on the device screen.</p>
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
             <samp class="samp-screen"
