--- a/app/views/modal/firmware.html
+++ b/app/views/modal/firmware.html
@@ -19,6 +19,9 @@
 
       <h5 ng-if="firmware.changelog">Changelog:</h5>
       <pre ng-if="firmware.changelog">{{firmware.changelog}}</pre>
+      <p ng-if="firmware.notes">
+        <a ng-href="{{firmware.notes}}">Read the full release notes</a>
+      </p>
 
       <p class="alert alert-info alert-withicon">
         <span class="glyphicon glyphicon-info-sign alert-icon"></span>
@@ -58,6 +61,9 @@
         <p>
           <h5>Changelog:</h5>
           <pre>{{firmware.changelog}}</pre>
+        </p>
+        <p ng-if="firmware.notes">
+          <a ng-href="{{firmware.notes}}">Read the full release notes</a>
         </p>
       </div>
 
