Keep active tab when switching accounts, even across devices
Needed for comfortable switching of devices/accounts after URI handler activation.

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -45,7 +45,7 @@
       <!-- Account -->
       <li ng-repeat="account in device.accounts"
           ng-class="{ disabled: account.balance == null }">
-        <a ng-href="#/device/{{device.id}}/account/{{account.id}}{{account.isEmpty()?'/receive':''}}"
+        <a ng-href="{{ accountLink(device, account)}}"
            ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}') }"
           >{{account.label()}}
           <small class="dev-acc-info">
