--- a/app/views/account/nav.html
+++ b/app/views/account/nav.html
@@ -1,5 +1,5 @@
 <ul ng-controller="NavCtrl"
-    class="nav nav-tabs nav-sendrecv">
+    class="nav nav-tabs">
   <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}$') }">
     <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
       <span class="glyphicon glyphicon-transfer"></span> Transactions
